--- a/frontend/src/components/Invoices/Invoice.css
+++ b/frontend/src/components/Invoices/Invoice.css
@@ -9,6 +9,10 @@
     font-size: 16px;
     margin: 5px;
   }
+
+  h2 {
+    margin-bottom: 30px;
+  }
   .container {
     width: 100%;
     height: 92vh;
@@ -16,6 +20,10 @@
     justify-content: space-evenly;
     align-items: center;
     background-color: #f9fafc;
+  }
+
+  .container-title {
+    margin-bottom: 10px;
   }
 
   .details_card {
@@ -144,7 +152,7 @@
     border-radius: 10px;
   }
   
-  .proced_payment a {
+  .proced_payment button {
     padding: 10px 20px;
     width: 200px;
     border: 2px solid #f5f5f5;
@@ -153,6 +161,12 @@
     margin-left: 10px;
     cursor: pointer;
     text-decoration: none;
+  }
+
+  .container-flex {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 50px;
   }
   
   footer {
