--- a/frontend/src/components/Invoices/Invoice.css
+++ b/frontend/src/components/Invoices/Invoice.css
@@ -21,10 +21,11 @@
     align-items: center;
     background-color: #f9fafc;
     margin-left: 10px;
+    margin-bottom: 10px;
   }
 
   .container-title {
-    margin-bottom: 10px;
+    margin-bottom: 15px;
   }
 
   .details_card {
@@ -37,11 +38,12 @@
   }
   
   .summary_card {
-    background-color: #fff;
+    background-color: rgb(255, 254, 241);
     width: 350px;
     box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
     border-radius: 8px;
     padding: 10px;
+    margin-bottom: 15px;
   }
   
   .card_item {
@@ -61,6 +63,8 @@
     width: 70px;
     border-radius: 5px;
   }
+
+
   
   .product_info h1 {
     font-size: 20px;
@@ -79,6 +83,9 @@
     justify-content: space-between;
   }
   
+  
+
+
   .pqt {
     font-size: 20px;
     line-height: 30px;
@@ -158,10 +165,11 @@
     width: 200px;
     border: 2px solid #f5f5f5;
     background-color: #53b5aa;
-    color: #000;
-    margin-left: 10px;
+    color: rgb(255, 255, 255);
     cursor: pointer;
     text-decoration: none;
+    margin-top: 15px;
+    text-transform: uppercase;
   }
 
   .container-flex {
